[project]
name = "comfyui_ollamaunload"
description = "Unload one or all Ollama models mid-workflow to free VRAM before image sampling. Wire your prompt through the passthrough socket so the node runs before the sampler. Node name: Ollama Unload (free VRAM). Located under Add Node > Ollama."
version = "1.0.2"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/bradsec/ComfyUI_OllamaUnload"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "bradsec"
DisplayName = "ComfyUI_OllamaUnload"
Icon = ""
